--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,12 @@
 name = "PerspectiveFigures"
 authors = ["Wagemakers"]
-[compat]
-julia = "1.7.2"
-DrWatson = "2.9.1"
+
 [deps]
+CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
+DynamicalSystems = "61744808-ddfa-5f27-97ff-6e42cc95d634"
+OrdinaryDiffEq = "1dea7af3-3e70-54e6-95c3-0bf5283fa5ed"
+
+[compat]
+DrWatson = "2.9.1"
+julia = "1.7.2"
