--- a/Project.toml
+++ b/Project.toml
@@ -4,6 +4,7 @@ authors = ["Wagemakers"]
 [deps]
 CairoMakie = "13f3f980-e62b-5c42-98c6-ff1f3baf88f0"
 ColorSchemes = "35d6a980-a343-548e-a6ea-1d62b119f2f4"
+Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DrWatson = "634d3b9d-ee7a-5ddf-bec9-22491ea816e1"
 DynamicalSystems = "61744808-ddfa-5f27-97ff-6e42cc95d634"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
